--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="/maintenance">
+    <base href="/maintenance/">
     <title>V-Learning</title>
     <meta http-equiv="refresh" content="60">
     <meta charset="utf-8" />
