--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="refresh" content="60">
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.webp">
+    <link rel="icon" type="image/x-icon" href="assets/favicon.webp">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="keywords" content="V-Learning, Education Application, School Application, Dreammithra Pvt.Ltd">
     <meta name="description" content="V-Learning Quality Education for all.">
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="assets/style.css">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css">
 </head>
@@ -20,7 +20,7 @@
     <div class="no-script-header">
         <div class="inner-header flex">
         <div class="box">
-            <img src="/assets/logo.webp" alt="V-Learning Logo">
+            <img src="assets/logo.webp" alt="V-Learning Logo">
             </div>
         </div>
                   
